# test

./: docker-compose.yml  pyproject.toml
photo_api/: asgi.py  settings.py  urls.py  wsgi.py
photos/: models.py  serializers.py  urls.py  views.py
photos/migrations/: 0001_initial.py
